@startuml
skinparam linetype ortho

abstract class Projet {
    titre : varchar[20] {key}
    description : text
    objectif : float
    lancement : date {key}
}

class Incubateur {
    nom: varchar[20] {key}
    création : integer[4]
    budget : float
}

Incubateur "0..1" --> "0..n" Projet : Soutient

class Projet_Techno {
    innovation : text
}
class Projet_Artis {
    médium : text
}
class Projet_Social {
    région : text
}
class ONG {
    NEU : integer {key}
    nom : varchar[20]
    pays : varchar[20]
}

Projet <|-- Projet_Techno
Projet <|-- Projet_Artis
Projet <|-- Projet_Social
Projet_Social "0..n" <-- "0..n" ONG : Soutient

class Membre {
    nom : varchar[20] {key}
    prenom : varchar[20] {key}
    pays : varchar[10]
    naissance : date {key}
}

Enum Rôle{
chef de projet
développeur
designer
community manager
}

class MembreProjet {
    rôle : Rôle {key}
}

Membre "1..n" -right-> "0..n" Projet : Participe
(Membre, Projet) .. MembreProjet

class Contributeur {
    pseudo : varchar[20] {key}
    mail : varchar[20]
    nom : varchar[20]
    naissance : date
}

class Contribution {
    date : datetime {key}
    montant : float
}

class Avis {
    date : date
    note : integer[1..5]
    texte : text
}

note right of (Avis)
Le contributeur doit
avoir contribué pour donner un avis
end note

Contributeur "0..n" <-left- "0..n" Projet : Contribue
(Contributeur, Projet) . Contribution

Contributeur "0..n" <-left- "0..1" Projet : Note
(Contributeur, Projet) . Avis

interface Contrepartie {
}

class Contrepartie_Numérique {
    format : varchar[10]
    tailleFichier : integer
}

class Contrepartie_Physique {
    poids : float
    fraisLivraison : float
}

class Transporteur {
    nom : varchar[20] {key}
    delai : integer
}

Contribution *-- "0..1" Contrepartie

Contrepartie <|-- Contrepartie_Numérique
Contrepartie <|-- Contrepartie_Physique
Transporteur "1" --> "0..n" Contrepartie_Physique : Transporte

@enduml
